<resources>
    <string name="app_name">Escobar_Silva</string>
    <string name="eliminar">Eliminar</string>
    <string name="txt_listadodeproductos">Listado de productos</string>
    <string name="txt_detalle">Detalle Producto</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="login">LOGIN</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre_editext">Nombre</string>
    <string name="precio_editext">Precio</string>
    <string name="url_imagen_editext">URL imagen</string>
    <string name="registrar_producto_btn">Registrar Producto</string>
    <string name="inicio">Inicio</string>
    <string name="editar">Editar</string>
</resources>